<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewMejor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mejor_videojuego"
        app:layout_constraintBottom_toTopOf="@+id/textViewCual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/textViewCual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escoger"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/textViewMejor"
        app:layout_constraintStart_toStartOf="@+id/textViewMejor"
        app:layout_constraintTop_toBottomOf="@+id/textViewMejor" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxTeGusta"
        app:layout_constraintEnd_toEndOf="@+id/textViewCual"
        app:layout_constraintStart_toStartOf="@+id/textViewCual"
        app:layout_constraintTop_toBottomOf="@+id/textViewCual">

        <RadioButton
            android:id="@+id/radioButtonFallout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fallout" />

        <RadioButton
            android:id="@+id/radioButtonFortnite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fortnite" />

        <RadioButton
            android:id="@+id/radioButtonLol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lol" />

        <RadioButton
            android:id="@+id/radioButtonTf2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tf2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxTeGusta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/te_gusta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>